--- a/index.html
+++ b/index.html
@@ -50,7 +50,14 @@
             </div>
         </div>
         <div id="snake" class="tabcontent">
-        <canvas id="snake-board"></canvas>
+            <div class="flex">
+                <canvas id="snake-board"></canvas>
+            </div>
+            <div class="flex snake-buttons">
+                <button id="snake-pause" class="snake-button">PAUSE</button>
+                <button id="snake-start" class="snake-button">START</button>
+                <button id="snake-settings" class="snake-button">SETTINGS</button>
+            </div>
         </div>
         <div id ="shooter" class="tabcontent">
         <canvas id="shooter-board"></canvas>
