--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                 <button id="snake-pause" class="snake-button">PAUSE</button>
                 <button id="snake-start" class="snake-button">START</button>
                 <button id="snake-settings" class="snake-button">SETTINGS</button>
+                <button id="random-color" class="snake-button">RANDOM COLORS: OFF</button>
             </div>
         </div>
         <div id ="shooter" class="tabcontent">
