--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
             </div>
         </div>
         <div id ="shooter" class="tabcontent">
-        <canvas id="shooter-board"></canvas>
+            <div id="shooter-player"></div>
+            <canvas id="shooter-board"></canvas>
         </div>
     </div>
 </body>
