shooter done for now

--- a/index.html
+++ b/index.html
@@ -61,8 +61,17 @@
             </div>
         </div>
         <div id ="shooter" class="tabcontent">
+            <div id="contained-container">
+                <h1 id="shooter-state">READY TO PLAY</h1>
+                <button id="shooter-start">START</button>
+            </div>
+            <div id="shooter-bar">
+                <button id="shooter-score" class="shooter-button">SCORE: 0</button>
+                <button id="shooter-settings" class="shooter-button">SETTINGS</button>
+            </div>
             <div id="shooter-player"></div>
             <canvas id="shooter-board"></canvas>
+
         </div>
     </div>
 </body>
