home page started

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     <!--Tab contents-->
     <div id="content">
         <div id="home" class="tabcontent">
-            <p1>Welcome!</p1>
+            <h1 id="home-welcome">Welcome!</h1>
+            <a href="https://github.com/genehe3/Portfolie" id="">Source Code!</a>
         </div>
         <div id="calc" class="tabcontent">
             <div id="calculator">
